# live-translation

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
live_translation/: main.py  microphone.py
scripts/: text-overdrive.py
tests/: test_live_translation.py
