[tool.poetry]
name = "live-translation"
version = "0.1.0"
description = ""
authors = ["Luke Hsiao <luke@hsiao.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-media-translation = "^0.5.0"
PyAudio = "^0.2.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
