[tool.poetry]
name = "live-translation"
version = "0.1.0"
description = "A simple CLI for live translated captions using Google's Media Translation API."
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/lukehsiao/live-translation"
homepage = "https://github.com/lukehsiao/live-translation"
authors = ["Luke Hsiao <luke@hsiao.dev>"]

[tool.poetry.scripts]
translate = "live_translation.main:app"

[tool.poetry.dependencies]
PyAudio = "^0.2.11"
google-cloud-media-translation = "^0.5.0"
pynput = "^1.7.3"
python = "^3.8"
typer = "^0.3.2"
xlib = "^0.21"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.9.2"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
